# hasql

./: .gitignore  CLAUDE.md  Makefile  README.md  README.rst  TODO.md  docker-compose.yml  justfile  pylama.ini  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  tox.yml
chaos/: Dockerfile.pg  README.md  controller.py  docker-compose.yml  requirements.txt  run_all.py
chaos/harness/: base.py  run_aiopg.py  run_aiopg_sa.py  run_asyncpg.py  run_asyncsqlalchemy.py  run_psycopg3.py
chaos/pg-master/: init.sql  pg_hba.conf
chaos/pg-replica/: entrypoint.sh
chaos/scenarios/: common.py  freeze_master.py  replica_failover.py
docs/: class-scheme.md  metrics-dashboard-example.md  migration-0.9.0-to-0.10.0.md  migration-0.9.0-to-0.11.0.md  review-plan.md  timeouts.md  types.md
docs/plans/: 2026-03-30-chaos-test-stand.md  2026-03-30-hasql-custom-exceptions.md
docs/superpowers/plans/: 2026-03-29-mr-review-fixes.md  2026-03-30-stale-replica-detection.md
docs/superpowers/specs/: 2026-03-29-stale-replica-detection-design.md
example/: simple_web_server.py
example/otlp/: aiopg.py  aiopg_sa.py  asyncpg.py  asyncsqlalchemy.py  common.py  psycopg3.py
hasql/: __init__.py  abc.py  acquire.py  aiopg.py  aiopg_sa.py  asyncpg.py  asyncpgsa.py  asyncsqlalchemy.py  base.py  constants.py  exceptions.py  hasql.py  health.py  metrics.py  pool_manager.py  pool_state.py  psycopg3.py  staleness.py  utils.py
hasql/balancer_policy/: __init__.py  base.py  greedy.py  random_weighted.py  round_robin.py
hasql/driver/: aiopg.py  aiopg_sa.py  asyncpg.py  asyncpgsa.py  asyncsqlalchemy.py  psycopg3.py
plan/: metrics-improvement.md
tests/: conftest.py  test_abc.py  test_acquire.py  test_aiopg.py  test_aiopg_sa.py  test_asyncpg.py  test_asyncsqlalchemy.py  test_backward_compat.py  test_balancer_policy.py  test_base_pool_manager.py  test_calculate_metrics.py  test_exceptions.py  test_metrics.py  test_policy.py  test_psycopg3.py  test_staleness.py  test_staleness_integration.py  test_timeout_handling.py  test_trouble.py  test_utils.py
tests/mocks/: pool_manager.py
